# gesture-vr-ai

./: .gitignore  README.md
src/cpp/: CMakeLists.txt  gesture_inference.cpp
src/python/: collect_data.py  train_model.py
